# Ilium

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: ws.rs  ws_old.rs
macros/: Cargo.toml
macros/src/: lib.rs  queue.rs  state.rs  util.rs
server/: Cargo.toml
server/src/: account.rs  app.rs  auth.rs  data.rs  lib.rs  matchmaking.rs  queries.rs  queue.rs  send.rs  state.rs  time.rs  update.rs  ws.rs
session/: Cargo.toml
session/src/: action.rs  codec.rs  info.rs  lib.rs  msg.rs  queue.rs  state.rs  time.rs  token.rs
src/: lib.rs
