[workspace]
resolver = "2"
members = ["client", "server", "session"]

[workspace.dependencies]
trait-variant = "0.1.2"
sqlx = "0.8.2"
bevy = "0.15"
web-sys = "0.3.72"
serde = { version = "1.0.215", features = ["derive"] }
wasm-bindgen = "0.2.95"
axum = { version = "0.7.5", features = ["macros"] }
fastwebsockets = { version = "0.8.0", features = ["with_axum", "upgrade", "unstable-split"] }
kanal = "0.1.0-pre8"
postcard = { version = "1.0.8", features = ["use-std"] }
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["fs"] }
tracing = { version = "0.1" }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
eyre = "0.6.12"

leptos = { version = "0.6", features = ["nightly", "experimental-islands"] }
leptos_axum = { version = "0.6", features = ["experimental-islands"] }
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_router = { version = "0.6", features = ["nightly"] }
js-sys = "0.3.69"
