[package]
name = "ilium"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["client", "macros", "server", "session"]

[features]
server = ["dep:server", "session/server", "macros/server"]
client = ["dep:client", "macros/client"]

[dependencies]
macros = { path = "macros" }
session = { path = "session" }
server = { path = "server", optional = true }
client = { path = "client", optional = true }

[workspace.dependencies]
trait-variant = "0.1.2"
bevy = "0.15"
web-sys = "0.3.72"
serde = { version = "1.0.215", features = ["derive"] }
wasm-bindgen = "0.2.95"
axum = { version = "0.7.5", features = ["macros"] }
fastwebsockets = { version = "0.8.0", features = ["with_axum", "upgrade", "unstable-split"] }
kanal = "0.1.0-pre8"
postcard = { version = "1.0.8", features = ["use-std"] }
tracing = { version = "0.1" }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
eyre = "0.6.12"
rkyv = { version = "0.8.9", features = ["bytecheck", "alloc"] }
bytecheck = "0.8.0"

leptos = { version = "0.7", features = ["nightly", "rkyv"] }
leptos_axum = { version = "0.7", features = [] }
leptos_meta = { version = "0.7", features = ["nightly"] }
leptos_router = { version = "0.7", features = ["nightly"] }
js-sys = "0.3.69"
