[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
web-sys.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
leptos.workspace = true
postcard.workspace = true

leptos-use = "0.15.5"
codee = { version = "0.3.0", features = ["rkyv"] }

session = { path = "../session" }
