[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
trait-variant.workspace = true
axum.workspace = true
fastwebsockets.workspace = true
kanal.workspace = true
bevy.workspace = true
uuid.workspace = true
leptos.workspace = true
leptos_axum.workspace = true
leptos_router.workspace = true
eyre.workspace = true
postcard.workspace = true
serde.workspace = true

sqlx = { version = "0.8.3", features = [
  "runtime-tokio-rustls",
  "chrono",
] }
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["fs"] }

session = { path = "../session", features = ["server"] }
